# stupid-file-share

./: .gitignore  Cargo.toml  README.md
src/: main.rs  models.rs  shorter.rs  storage.rs
src/routes/: admin.rs  file.rs  list.rs  mod.rs  upload.rs
